--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,6 @@ If you're getting stuck on a particular problem, try to understand \textbf{why} 
 If you're missing points consistently on coursework, try to come back to these problems to see why you are missing them.
 %\framebox[\linewidth][c]{Don't aim for ``understanding'' or ``regurgitating'' the solutions; instead aim for \textbf{\emph{mastery}}.}\par
 \vspace*{\fill} %Sandwich : as much vspace as possible
-\sloppy
 \begin{center} % Center the box
   \fbox{% creates the frame
   \parbox{\dimexpr\linewidth-2\fboxsep-2\fboxrule}% An \fbox has the width of its contents plus 2 \fboxsep plus 2 \fboxrule
@@ -399,7 +398,6 @@ Let the language $\textsf{RegexCrossword}$ be the set of all instances $\langle 
 \end{enumerate}
 
 \item \Level{3} I am concerned that my Python program is too complicated, and can be simplified without changing its behavior. It would be nice if I can check whether there is such a simpler program. We aren't concerned with what ``simplified'' means other than the size of the program. Let $L = \{ \langle P \rangle : P$ is a Python program and there is no other Python program smaller in size than $|\langle P \rangle|$ with language $L(P)\}$. Show that $L$ is not recognizable (Hint: you may assume the recursion theorem of the last problem).
-
 \end{enumerate}
-
+\backmatter
 \end{document}
