--- a/regular_languages.tex
+++ b/regular_languages.tex
@@ -92,7 +92,7 @@ Describe a regular language $L$ that their super secret DFA cannot possibly reco
 \item \label{dfa_equal_no_product} \Level{4} Devise an algorithm that, on input two DFAs $D_1, D_2$, outputs True if $L(D_1) = L(D_2)$, and false otherwise.
 However, you may not use any techniques other than the definition of a DFA, and any tools from prerequisite material (i.e., you may not use the product construction or other closure properties here).
 
-\subsection{Product Construction}
+\section{Product Construction}
 
 For these problems, just formally \emph{describe} a DFA that recognizes $L$; don't attempt to draw the DFA as it may be too large. 
 Instead, all you need to specify is a formal description of the 5 pieces of a DFA; $Q, \Sigma, \delta, q_0$, and $F$.
@@ -124,7 +124,7 @@ Construct a DFA that recognizes the language $L_2 \cap (L_1 \cup \overline{L_3})
 
 \item \Level{2} Related to \cref{dfa_equal_no_product}, devise an algorithm that, on input two DFAs $D_1, D_2$, outputs True if $L(D_1) = L(D_2)$, and false otherwise (here you \emph{can} use the product construction).
 
-\subsection{NFAs}
+\section{NFAs}
 
 \item \label{ex2017fnfa} \Level{1} Consider the following NFA:
 
@@ -157,18 +157,18 @@ Convert this NFA into an equivalent DFA.
 
 
 
-\subsection{Regular Expressions}
+\section{Regular Expressions}
 
 \item \Level{1} Convert the DFA for \cref{ex2017fprod1} into an equivalent regex.
 
-\subsection{Pumping Lemma for Regular Languages}
+\section{Pumping Lemma for Regular Languages}
 
 \item \Level{2} Recall the definition of $Square(L)$ from \cref{ex2017fsquaredouble}. 
 Show that there is a regular language $L$ for which $Square(L)$ is not regular.
 
 \item \Level{4} Let $L$ be any unary language, regular or not. Show that $L^\star$ is regular.
 
-\subsection{Regular Grammars}
+\section{Regular Grammars}
 
 \item \Level{1} Convert the NFA from \cref{ex2017fnfa} into an equivalent regular grammar.
 
